# dta

./: .gitignore  ISSUE-41-ANALYSIS.md  ISSUE-41-SUMMARY.md  LICENSE.txt  README-ISSUE-41.md  README.md  TESTING-GUIDE-ISSUE-41.md  build.gradle  gradle.properties  jitpack.yml  settings.gradle  test-issue-41-fix.sh
.github/workflows/: release-dev.yml  release.yml  snapshot.yml  snyk-security.yml
adt-cli/: build.gradle
adt-debug-server/: build.gradle
adt-debug-server/src/main/resources/: application.properties  logback-spring.xml
adt-mcp/: README.md  pyproject.toml
adt-mcp-server/: build.gradle
adt-mcp/adt_inspector/: __init__.py  app.py
adt-mcp/adt_mcp/: __init__.py  adb.py  server.py  sidekick.py
adt-sidekick/: build.gradle.kts
adt-sidekick/src/main/cpp/: CMakeLists.txt  agent.cpp  class_transformer.cpp  hook_manager.cpp  (+1 more)
docs/plans/: chrome-custom-tabs-network-capture.md  network-interceptor.md
dta-cli/: build.gradle
dta-daemon/: build.gradle
dta-inspector-web/: build.gradle
dta-mcp/: build.gradle
dta-plugin/: build.gradle.kts
dta-server/: build.gradle
dta-sidekick/: build.gradle.kts
dta-sidekick-shim/: build.gradle.kts
dta-sidekick/src/main/: AndroidManifest.xml
dta-sidekick/src/main/cpp/: CMakeLists.txt  agent.cpp  class_transformer.cpp  class_transformer.h  hook_manager.cpp  sidekick_log.h
gradle/: libs.versions.toml
test-fixtures/android-projects/: README.md
tools-android/: README.md  build.gradle
tools-android-cli/: build.gradle
workspace-kotlin/: README.md  build.gradle
workspace-kotlin-cli/: build.gradle
(+465 files in other folders)
